--- a/core/BootstrapE-Mail.csproj
+++ b/core/BootstrapE-Mail.csproj
@@ -3,6 +3,22 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>BootstrapE_Mail</RootNamespace>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>0.1.1</Version>
+    <PackageId>BootstrapE-MailCSharp</PackageId>
+    <Authors>Newwin SWS</Authors>
+    <Company>Newwin SWS</Company>
+    <Product>Bootstrap E-Mail C#</Product>
+    <Description>This Library converts a Bootstrap 4 Page, so that it should look the same on most to all E-Mail HTML Clients</Description>
+    <PackageProjectUrl>https://github.com/newwinAG/bootstrap-email</PackageProjectUrl>
+    <Copyright>Copyright New-win SWS AG</Copyright>
+    <RepositoryUrl>https://github.com/newwinAG/bootstrap-email</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Bootstrap,E-Mail</PackageTags>
+    <PackageReleaseNotes>Corrected Inline CSS File handling</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
