--- a/core/BootstrapE-Mail.csproj
+++ b/core/BootstrapE-Mail.csproj
@@ -8,7 +8,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>0.1.1</Version>
-    <PackageId>BootstrapE-MailCSharp</PackageId>
+    <PackageId>BootstrapEMailCSharp</PackageId>
     <Authors>Newwin SWS</Authors>
     <Company>Newwin SWS</Company>
     <Product>Bootstrap E-Mail C#</Product>
